# THE3DENGINE

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  doc.md
.github/workflows/: build_and_test.yml  ci.yml  cmake-multi-platform.yml
Client/: CMakeLists.txt
Client/src/: main.cpp
Editor/: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h  main.cpp
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/inc/: Engine.h  TimeManager.h
Engine/src/: Engine.cpp  TimeManager.cpp  Types.ixx  config.h
Engine/src/Core/: Application.cpp  Application.h  Config.ixx  Context.ixx  Loop.ixx  Scheduler.ixx  Window.cpp  Window.h
Engine/src/Event/: Event.h  EventManager.cpp  EventManager.h
Engine/src/Input/: InputManager.cpp  InputManager.h  Key.h
Engine/src/Physic/: PhysicSystem.cpp  PhysicSystem.h
Engine/src/Physics/: Physics.cpp  Physics.h
Engine/src/Render/: RenderSystem.cpp  RenderSystem.h
Engine/src/Renderer/: BufferElement.h  BufferLayout.h  CullingLayerMask.h  IIndexBuffer.h  IRenderer.h  IVertexArray.h  IVertexBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Renderer/Components/: Camera.h  MeshRenderer.h
Engine/src/Renderer/api/OpenGL/: OpenGLRenderer.h  OpenglIndexBuffer.h  OpenglVertexArray.h  OpenglVertexBuffer.h
Engine/src/Renderer/api/Vulkan/: VulkanRenderer.h
Engine/src/Resource/: Mesh.h  Model.h  Resource.h  ResourceManager.h  Script.h  Shader.h  Texture.h
Engine/src/Resource/Resources/: Material.h  Mesh.h  Model.h  Resource.h  Shader.h  Texture.h
Engine/src/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/src/Scene/Components/: CameraComponent.h  MeshComponent.h  Transform.h  TransformComponent.h
Engine/src/Scripting/: ScriptManager.cpp  ScriptManager.h
Engine/src/Time/: TimeManager.cpp  TimeManager.h
Engine/src/Window/: RenderContext.h  Window.cpp  Window.h  WindowHandle.h  WindowManager.cpp  WindowManager.h
Engine/src/log/: Log.cpp  Log.h  Logger.cpp  Logger.h
Engine/test/: CMakeLists.txt  test_TimeManager.cpp
GameApp/: CMakeLists.txt
GameApp/src/: main.cpp
Runtime/: CMakeLists.txt
Runtime/src/: App.cpp  App.h  Window.cpp  Window.h  main.cpp
assets/objects/crate/: crate.mtl
assets/objects/farmhouse/: Farmhouse.mtl
assets/objects/sphere/: sphere.mtl
assets/objects/sphereLisseWhite/: sphere.mtl
assets/shaders/: shader.frag  shader.vert
assets/shaders/basic/: shader.frag  shader.vert
assets/shaders/light/: shader.frag  shader.vert
assets/shaders/skybox/: shader.frag  shader.vert
inc/: Engine.h  EventManager.h  InputManager.h  RendererEngine.h  ResourceManager.h  Scene.h  SceneManager.h  TimeManager.h
inc/Event/: InputState.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
inc/Objects/: Camera.h  DirectionalLight.h  Light.h  Node.h  Object.h  SpotLight.h
inc/Resource/: Texture.h  Vertex.h
inc/Resources/: Mesh.h  Shader.h  Texture.h
inc/Scene/: Entity.h  Scene.h
inc/Scene/Components/: Component.h  Transform.h
inc/Scene/Systems/: Gravity.h  System.h
include/: Camera.h  Engine.h  InputManager.h  Model.h  Object.h  Scene.h  Shader.h  Texture.h  TimeManager.h  fonction.h
include/Objects/: Camera.h  DirectionalLight.h  Light.h  Model.h  Model3D.h  Node.h  Object.h  Skybox.h  SpotLight.h
include/Resource/: Mesh.h  Shader.h  Texture.h
include/glad/: glad.h
src/: Camera.cpp  Engine.cpp  EventManager.cpp  InputManager.cpp  Model.cpp  Object.cpp  RendererEngine.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  Texture.cpp  TimeManager.cpp  fonction.cpp  glad.c  main.cpp
src/Event/: KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
src/Objects/: Camera.cpp  DirectionalLight.cpp  Light.cpp  Model.cpp  Model3D.cpp  Node.cpp  Object.cpp  Skybox.cpp  SpotLight.cpp
src/Resource/: Mesh.cpp  Shader.cpp  Texture.cpp
src/Resources/: Mesh.cpp  Shader.cpp  Texture.cpp
src/Scene/: Entity.cpp  Scene.cpp
tests/: test_scene.cpp
